<resources>
    <string name="app_name">RiaRewards</string>

    <string name="title_activity_splash_screen">SplashScreen</string>

    <string name="location_required">Location is required</string>
    <string name="facebook_app_id">762522577568407</string>
    <string name="GPSsettings">GPS settings</string>
    <string name="GPSsettingsmessage">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="Settings">Settings</string>
    <string name="Cancel">Cancel</string>

    <string name="google_maps_key">AIzaSyABnChbShKlBVugYjl6I6Qrm0fFMfTKkp4</string>
    <string name="exit">Please click BACK again to exit</string>
    <string name="blankError">Please enter value</string>
    <string name="start_redeeming_your_now">Start redeeming your now!</string>
    <string name="register_below">Register Below.</string>
    <string name="login_in_below">Login in below</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first_time_login">First Time Login</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="member_id">Member ID</string>
    <string name="first_time_register">First time register</string>
    <string name="email">Email *</string>
    <string name="first_name">First Name *</string>
    <string name="choose_a_password_and_enter_your_personal_details_n_denotes_mandatory_fields">Choose a password and enter your personal details,\n *denotes mandatory fields</string>
    <string name="your_phone_number_will_help_us_to_secure_your_account_n_and_information">Your phone number will help us to secure your account   and information</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="please_type_the_verification_code_send_to">Please type the verification code send to</string>
    <string name="resend_code">Resend Code</string>
    <string name="confirm">Confirm</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="ria_customer_number">Ria Customer Number *</string>
    <string name="ria_customer_number_email_c">Ria Customer Number or Email Address *</string>
    <string name="passwordc">Password *</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="submit">Submit</string>
    <string name="accept_to_terms_amp_conditions">Tick to accept the RiaRewards Terms and Conditions</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="receive_newsletter">Receive Newsletter</string>
    <string name="username_email">Username/Email</string>
    <string name="username_email_c">Username / Email *</string>
    <string name="send_reset_email">Send reset email</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="blank_error">Please enter value</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_account">My Profile</string>
    <string name="menu_customer_card">Customer Card</string>
    <string name="menu_current_promotions">Current Promotions</string>
    <string name="menu_points_history">Points History</string>
    <string name="menu_full_history_points">Full Points History</string>
    <string name="menu_review">Reviews</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="menu_categories">Rewards</string>
    <string name="menu_around_me">Rewards Around Me</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_t_n_c">Terms &amp; Condition</string>
    <string name="menu_faq">Faq</string>
    <string name="menu_logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="subject_line">Subject line*</string>
    <string name="contact_us_message">If you have any problems or would like to tell us what you think please feel free to let us know. Our team of highly skilled rewards consultants will be happy to assist you and respond to you enquires.</string>
    <string name="help">Help!</string>
    <string name="name">Name *</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="thank_you">Thank you!</string>
    <string name="we_have_received_your_message_and_will_respond_to_you_as_soon_as_possible">We have received your message and will respond to you as soon as possible</string>
    <string name="have_a_great_day">Have a great day!</string>
    <string name="done">Done</string>
    <string name="network_not_available">Network not available</string>
    <string name="not_products_available">Products not available near by your location</string>
    <string name="type_postcode_to_search">Type Postcode to search</string>
    <string name="search_products">Search Products</string>
    <string name="buy_now">Buy Now</string>
    <string name="pay_with_points">Pay with points</string>
    <string name="pay_with">Pay with $$</string>
    <string name="pay_with_dollar_points">Pay with $$ + points</string>
    <string name="write_a_review">Write a review</string>
    <string name="ria_reward_s_review">Ria Reward\'s Review</string>
    <string name="to_change_your_personal_details">To change your details please complete the form.</string>
    <string name="please_contact_us">Please contact us</string>
    <string name="basic_information">Basic Information</string>
    <string name="favourites">Favourites</string>
    <string name="personal_information">Personal Information</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="address_c">Address *</string>
    <string name="points_history">Points History</string>
    <string name="current_points">Current Points :</string>
    <string name="points_earned">Points Earned</string>
    <string name="points_spent">Points Spent</string>
    <string name="add_address">Add Address</string>
    <string name="state">State *</string>
    <string name="city">City *</string>
    <string name="pincode">Pincode *</string>
    <string name="add">Add</string>
    <string name="point_history">Point History</string>
    <string name="transaction_history">Transaction History</string>
    <string name="referrals">Referrals</string>
    <string name="points_received">Points Received</string>
    <string name="customer_number">Customer Number</string>
    <string name="share_amp_earn"><![CDATA[SHARE & EARN]]></string>
    <string name="view_amp_earn"><![CDATA[VIEW & EARN]]></string>
    <string name="view_offer">View Offer</string>
    <string name="current_promotions">Current Promotions</string>
    <string name="my_shopping_cart">My Shopping Cart</string>
    <string name="shopping_costs">Shopping costs</string>
    <string name="registered_post">Registered Post</string>
    <string name="regular_post">Regular Post</string>
    <string name="change">Change</string>
    <string name="payment_method">Payment Method</string>
    <string name="place_order">Place Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="my_address">My Address</string>
    <string name="address_2">Address 2 *</string>
    <string name="country">Country *</string>
    <string name="total_price">Total Price</string>
    <string name="shipping_costs">Shipping Costs</string>
    <string name="sub_total">Sub Total</string>
    <string name="merchant_redeem">Merchant Redeem</string>

    <!--     Payment-->
    <string name="please_enter_your_email_for_payment">Please enter your email for payment</string>
    <string name="email_mandatory">Email *</string>
    <string name="current_payment_details">Current payment details</string>
    <string name="enter_details">Enter card details</string>
    <string name="select_your_payment_option">Select your payment option</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="customer_review">Customer Review</string>
    <string name="last_transaction">Last Transaction</string>
    <string name="transaction_id">Transaction ID :</string>
    <string name="transaction_date">Transaction Date : </string>
    <string name="comment">Comment :</string>
    <string name="rating">Rating :</string>
    <string name="review_your_last_transaction">Review Your Last Transaction</string>
    <string name="amount">Amount :</string>
    <string name="status">Status :</string>
    <string name="failed_to_get_data_from_server">failed to get data from server</string>
    <string name="ria_customer_number_email">Ria Customer Number / Email</string>
    <string name="points_awarded">Points Awarded</string>
    <string name="point_balance">Point Balance</string>
    <string name="last_name">Last Name *</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="address_1">Address 1 *</string>
    <string name="note_to_amend">NOTE: To amend the below details, please contact Ria on 1800 701 488 or riarewards@riafinancial.com</string>
    <string name="note">NOTE:</string>
    <string name="to_amend_the_below_details_please_contact_ria_on">To amend the below details, please contact Ria on</string>
    <string name="balance">Balance</string>
    <string name="reason">Reason</string>
    <string name="awarded">Awarded</string>
    <string name="date">Date</string>

    <string name="dialog_title_auth">Authentication</string>
    <string name="dialog_msg_auth">Please verify credentials</string>
    <string name="click_here_for_full_history">Click here for full history</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ria_rewards_terms_and_conditions">Ria Rewards Terms and Conditions</string>
    <string name="use_this_card_at_your_authorised_ria_location">Use this card at your authorised Ria location</string>
    <string name="points">Points Required</string>
    <string name="points_used">Points Used</string>
    <string name="merchant_fee">Merchant Fee</string>
    <string name="pay">Pay</string>
    <string name="place_order_by_points">Place order by Points</string>

</resources>