<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ThankYou">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/thank_you"
            android:textColor="@color/orange"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/we_have_received_your_message_and_will_respond_to_you_as_soon_as_possible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/have_a_great_day"
            android:textColor="@color/orange"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@id/cmdDone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/blue"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/done"
            android:textColor="@android:color/white" />
    </LinearLayout>
</FrameLayout>