<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Register1">

    <include layout="@layout/toolbar_layout" />

    <include layout="@layout/point_history_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_100sdp"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/first_time_register"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/choose_a_password_and_enter_your_personal_details_n_denotes_mandatory_fields"
            android:textColor="@android:color/holo_blue_dark" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--                android:text="Kalpen Vaghela"-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/txtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--                android:text="Kalpen Vaghela"-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--        android:text="kalpen@121group.io"-->

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/your_phone_number_will_help_us_to_secure_your_account_n_and_information"
            android:textColor="@android:color/holo_blue_dark" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/txtMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/edtMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:hint="@string/mobile_number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--        android:text="0433313804"-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@id/cmdVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/blue"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/send_verification_code"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>