<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Payment">

    <include layout="@layout/toolbar_layout" />

    <include layout="@layout/point_history_view" />

    <!--    <fragment-->
    <!--        android:id="@+id/aroundMe"-->
    <!--        android:name="com.pegasusgroup.riarewards.fragment.Payment"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_weight="1"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <RelativeLayout
        android:id="@+id/layout_pager_change_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/first_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/plz_enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/please_enter_your_email_for_payment" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@id/txt_edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:hint="@string/email_mandatory"
                    android:imeOptions="actionDone"
                    android:inputType="textWebEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/dark_blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linear_paymentinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_32sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/current_payment_details"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/payment_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/enter_details"
                    android:textAppearance="@android:style/TextAppearance.Large" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_select_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/orange"
                android:fontFamily="@font/avenir_roman"
                android:paddingLeft="@dimen/_50sdp"
                android:paddingRight="@dimen/_50sdp"
                android:text="@string/select_your_payment_option"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_place_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp"
            android:background="@color/dark_blue"
            android:enabled="false"
            android:fontFamily="@font/avenir_roman"
            android:paddingLeft="30dp"
            android:paddingTop="5dp"
            android:paddingRight="30dp"
            android:paddingBottom="5dp"
            android:text="@string/place_order"
            android:textColor="@color/white"
            android:visibility="gone" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>